new enhancement and new logo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Cima Club</string>
+    <string name="app_name">Plex</string>
     <string name="TMBDB_API_KEY">d08157e78b7478bea59e97af188b7054</string>
     <string name="Alluc_API_KEY">1062e98c3af6a3aa7998a3993d2a3ea9</string>
     <string name="OPENLOAD_API_Login">169a92673705ce52</string>
