--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,13 +21,7 @@
     <string name="nav_about_us">About Us</string>
 
     <!-- Toolbar titles when navigation menu item is selected -->
-    <string-array name="nav_item_activity_titles">
-        <item>Home</item>
-        <item>Photos</item>
-        <item>Movies</item>
-        <item>Notifications</item>
-        <item>Settings</item>
-    </string-array>
+
 
     <string name="activity_title_about_us">About Us</string>
     <string name="activity_title_privacy_policy">Privacy Policy</string>
@@ -61,5 +55,9 @@
 
 
     </string>
+    <string name="Login_policy">by continuing , you agree to accept our</string>
+    <string name="Login_policy2"><u> policy</u></string>
+
+    <string name="Plex_Media">&#174;</string>
 
 </resources>
