--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
         or suggestions about our Privacy Policy, do not hesitate to contact us.</string>
 
 
-    <string name="ss"><font size="20">made by</font><font size="25"><b> Vacuum, Inc</b></font></string>
+    <string name="ss"><font size="20">made by</font><b> Vacuum, Inc</b></string>
     <string name="storyline">In mid-20s New York, Newt Scamander, the British young activist wizard,
         arrives in town, holding a mysterious leather suitcase which shelters a wide array of diverse
         and magical creatures that exist among us. Amid an already fragile equilibrium of secrecy,
