--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,8 @@
     <string name="Login_policy">By continuing , you agree to accept our .<u>policy.</u></string>
     <string name="Plex_Media">&#174;</string>
 
+    <string name="redeem"><u>By clicking Redeem, you agree to the Gift Card &amp; Promotional Code <i>Terms and Conditions</i> as applicable.</u></string>
+
+
 
 </resources>
